--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>My HTML File</title>
-  <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <script src="vendor/angular/angular.js"></script>
+  <script src="vendor/bootstrap/bootstrap.min.js"></script>
+  <script src="vendor/angular/angular.min.js"></script>
 </head>
 <body>
+<div class='container'>
+<div class='row'>
 
+<div class='col-md-6'>
   <p>Nothing here {{'yet' + '!'}}</p>
-
+</div>
+<div class='col-md-6'>
+Comming soon...
+</div>
+</div>
+</div>
 </body>
 </html>
