--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 
 <!doctype html>
 <html lang="en" ng-app>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-783841-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <head>
   <meta charset="utf-8">
-  <title>My HTML File</title>
+  <title>@jhcepas</title>
   <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
