--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
 <body>
 <div class='container'>
 <div class='row'>
-
-<div class='col-md-6'>
-  <p>Nothing here {{'yet' + '!'}}</p>
-</div>
-<div class='col-md-6'>
-Comming soon...
+  <div class='col-md-10'>
+    <h1>New minor update of ETE NPR (0.9.29)</h1>
+    <p>fixes problem with the automatic sequence name masking when using a single nucleotide input file  </p>
+  </div>
 </div>
 </div>
 </div>
